--- a/config/oculus.properties
+++ b/config/oculus.properties
@@ -1,8 +1,8 @@
 #This file stores configuration options for Iris, such as the currently active shaderpack
-#Sun Mar 03 15:43:31 NZDT 2024
+#Sat Mar 09 14:44:19 NZDT 2024
 colorSpace=SRGB
 disableUpdateMessage=false
 enableDebugOptions=false
 maxShadowRenderDistance=32
 shaderPack=
-enableShaders=true
+enableShaders=false
